# aicos

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: base.py  bear.md  bull.md  contrarian.md  devils_advocate.md  future_looker.md
agents/bear/: __init__.py  agent.py
agents/bull/: __init__.py  agent.py
agents/contrarian/: __init__.py  agent.py
agents/devils_advocate/: __init__.py  agent.py
agents/future_looker/: __init__.py  agent.py
agents/macro_analyst/: agent.py
agents/portfolio_manager/: agent.py
benchmarks/metrics/: performance.py
benchmarks/reports/: weekly_summary.py
benchmarks/strategies/: buy_and_hold.py
config/: scanner_candidates.json  settings.py  watchlist.json
dashboard/: app.py
data/: fetcher.py
demo/: demo_bear.py
docs/: index.html
ledger/alerts/: store.py
ledger/decisions/: store.py
ledger/pending/: store.py
ledger/positions/: store.py
ledger/runs/: store.py
ledger/transactions/: store.py
orchestrator/committee/: session.py
orchestrator/execution/: alpaca_client.py
orchestrator/scheduling/: daily_runner.py  market_hours.py  scheduler.py
orchestrator/sizing/: sizer.py
orchestrator/workflows/: alerts.py  investment_review.py  universe_scanner.py  watchlist_runner.py
tests/: test_alerts.py  test_alpaca_execution.py  test_bear.py  test_committee.py  test_cross_check.py  test_ledger_integration.py  test_performance.py  test_scheduler.py  test_sec_cross_check.py  test_sizing.py  test_universe_scanner.py
web/: README.md  package-lock.json  package.json
(+52 files in other folders)
