[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicos"
version = "0.1.0"
description = "AI Investment Committee OS — multi-agent investment decision system"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30",
    "flask>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy", "yfinance>=0.2"]

[tool.setuptools.packages.find]
include = ["agents*", "benchmarks*", "config*", "dashboard*", "ledger*", "orchestrator*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
